eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-backend-api-deployment
  labels:
    app: golang-backend-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-backend-api
  template:
    metadata:
      labels:
        app: golang-backend-api
    spec:
      containers:
      - name: golang-backend-api
        image: 305603388825.dkr.ecr.ap-northeast-2.amazonaws.com/simplebank:latest
        ports:
        - containerPort: 8080
