eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-backend-api-service
spec:
  selector:
    app: golang-backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP #diff. LoadBalancer
